...
      required this.isIncExp,
      required this.createdTime});

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      key: const Key('showDialogTap'),
      onTap: (() {
        showDialog(
            context: context,
            builder: ((context) {
              return SimpleDialog(
                backgroundColor: CustomTheme.dialogBack(isIncExp),
...
